--- a/smile_backend/blogs/templates/about.html
+++ b/smile_backend/blogs/templates/about.html
@@ -973,7 +973,7 @@
         </div>
         <div class="about-cards-container">
           <div class="card-another" style="width: 30rem ">
-            <img src="https://res.cloudinary.com/dmnep85ym/image/upload/v1713875766/ph8_vihccx.jpg" class="card-img-top"  style="object-fit: cover; height: 50%; !important" alt="..." />
+            <img src="https://res.cloudinary.com/dmnep85ym/image/upload/v1713875766/ph8_vihccx.jpg" class="card-img-top"  style="object-fit: cover; height: 50%;" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Raghav Bajpai</h5>
               <h5 class="card-title">Convenor</h5>
