--- a/smile_backend/blogs/static/style.css
+++ b/smile_backend/blogs/static/style.css
@@ -16,7 +16,7 @@ body {
 
 
 }
-*::selection {
+/* *::selection {
   background-color: #fff;
   color: #95c11e;
 }
@@ -30,7 +30,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #fff;
 
   border-radius: 50px;
-}
+} */
 body {
   overflow-x: hidden;
 }
@@ -153,6 +153,7 @@ video {
   animation-duration: 40s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+  
 }
 
 #scroller h4 {
@@ -181,7 +182,7 @@ video {
 }
 
 #about-us {
-  height: 40vh;
+  
   width: 100%;
   /* background-color: red; */
   display: flex;
@@ -191,12 +192,12 @@ video {
   z-index: 10;
   justify-content: space-around;
 }
-#about-us img {
+/* #about-us img {
   height: 220px;
   width: 220px;
   border-radius: 20px;
   object-fit: cover;
-}
+} */
 #about-us-in {
   width: 50%;
   text-align: center;
@@ -204,11 +205,10 @@ video {
 #about-us-in h3 {
   font-size: 54px;
   font-weight: 800;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 #about-us-in p {
   font-size: 20px;
-  line-height: 26px;
 }
 
 #cards-container {
@@ -228,7 +228,7 @@ video {
   border-radius: 20px;
   background-size: cover;
   background-position: center;
-  overflow: hidden;
+
   transition: all ease 0.6s;
 }
 #card1 {
@@ -315,14 +315,15 @@ video {
   width: 14%;
 }
 
-#page3 {
+/* #page3 {
   height: 100vh;
   width: 100%;
-  background-color: #ed5c24fc;
+  background-color: #ea9e80fc;
   display: flex;
   align-items: center;
   position: relative;
   justify-content: center;
+  
 }
 #page3 > p {
   font-size: 35px;
@@ -343,7 +344,7 @@ video {
 #page3 #colon2 {
   bottom: 30%;
   right: 15%;
-}
+} */
 #page4 {
   height: 100vh;
   width: 100%;
