--- a/smile_backend/blogs/templates/navbar.html
+++ b/smile_backend/blogs/templates/navbar.html
@@ -25,7 +25,8 @@
         display: flex;     
         gap:.7em;
         justify-content: space-around;
-       
+        
+
     }
     
     header ul li {
@@ -55,47 +56,16 @@
     }
     
     header .menu {
-        font-size: 1.5em;
+        
+        font-size: 1.3em;
         display: none;
     }
 
     
  
-    @media(max-width: 1000px) {
-        header ul {
-            position: fixed;
-            top: 100px;
-            right: -100%;
-            background: rgba(0, 0, 0, 0.5);
-            height: calc(100vh - 100px);
-            width: 50%;
-            flex-direction: column;
-            align-items: center;
-            transition: right 0.5s linear;
-        }
-        
-        header .menu {
-            display: block;
-            width: 100px;
-            text-align: center;
-        }
-        
-        #chk1:checked ~ ul {
-            right: 0;
-        }
-    }
     
-    @media(max-width: 600px) {
-        header .logo {
-            font-size: 10px;
-            margin-left: 8px;
-        }
-        
-        header ul {
-            width: 100%;
-        }
-       
-    }
+    
+   
     
     .lo_go img {
         height: 60px;
@@ -132,19 +102,105 @@
     display: none;
     flex-direction: column;
     cursor: pointer;
+    
 }
 
-.menu span {
-    width: 25px;
-    height: 3px;
-    background: white;
-    margin: 4px 0;
+.drop{
+    display:none;
+}
+
+.menu:hover{
+    .drop{
+        display: flex;
+        flex-direction: column;
+    }
+}
+.menu .drop {
+    
+    width: 100%;
+    height: 15em;
+    
+    background: rgb(251, 251, 251);
     transition: 0.4s;
 }
 
+.bg-cir{
+   
+    background-color: rgba(185, 187, 189, 0.785);
+    backdrop-filter: blur(4.5px);
+    height:1.8em;
+    width:1.8em;
+    border-radius: 50%;
+    position: absolute;
+    right: 0.3em;
+    top: 0.1em;
+    align-content: center;
+
+}
+
+@media(max-width: 800px) {
+        /* header ul {
+            position: fixed;
+            top: 100px;
+            right: -100%;
+            background: rgba(0, 0, 0, 0.5);
+            height: calc(100vh - 100px);
+            width: 50%;
+            flex-direction: column;
+            align-items: center;
+            transition: right 0.5s linear; 
+            
+        } */
+        
+        /* header .menu {
+            display: block;
+            width: 100px;
+            text-align: center;
+        }
+        
+        #chk1:checked ~ ul {
+            right: 0;
+        } */
+        header ul li a{
+            
+            padding:10px 10px;
+        
+        }
+          
+    }
+
+    @media(max-width: 600px) {
+        header .logo {
+            font-size: 10px;
+            margin-left: 8px;
+        }
+        
+        header ul {
+            width: 100%;
+            
+        }
+        header .menu {
+            display: block;
+            width: 100px;
+            text-align: center;
+        }
+        .option{
+            display: none;
+        }
+        
+        #chk1:checked ~ ul {
+            right: 0;
+        }
+        .lo_go img{
+            height: 40px;
+            width:40px;
+        }  
+           
+    }
+
 </style>
 <header>
-    <input type="checkbox" name="" id="chk1">
+    <!-- <input type="checkbox" name="" id="chk1"> -->
     <div class ="lo_go">
         <img src="https://res.cloudinary.com/dmnep85ym/image/upload/v1713867500/for_black_bgm_ioxgoi.png" alt="Smile Club Logo">
         <!-- Insert your logo image here -->
@@ -167,14 +223,14 @@
     </ul>
     </div>
     <div class="menu">
+        <label for="chk1">
+            <div class="bg-cir">
             <i class="fa fa-bars"></i>
-            <span><a href="{% url 'home' %}">Home</a></span>
-            <span><a href="{% url 'team-list' %}">About us</a></span>
-            <span><a href="{% url 'blogs-list' %}">Blog</a></span>
-            <span><a href="{% url 'event-list' %}">Timeline</a></span>
-            <span><a href="{% url 'gallery' %}">Gallery</a></span>
-            <span><a href="{% url 'gallery' %}">Gallery</a></span>
-            <a href="{% url 'display_youtube_videos' %}">Videos</a>
-        
+            </div>
+        </label>    
+        <!-- <div class="drop">
+            <span>Home</span>
+            <span>About Us</span>
+        </div>    -->
     </div>
 </header>
