--- a/smile_backend/blogs/templates/index.html
+++ b/smile_backend/blogs/templates/index.html
@@ -4,7 +4,6 @@
   {%load static%}
   {% load bootstrap5 %}
   {% bootstrap_css %}
-  {% bootstrap_javascript %}
 
   <head>
     <meta charset="UTF-8" />
@@ -58,66 +57,11 @@
      }
      #about-us p{
       margin-top:-1em;
-     }
-     /* header .search-box{
-        flex:1;
-        position: relative;
-        
-     } */
-     /* .search-box input{
-        width:100%;
-        height:40px;
-        border:none;
-        outline: none;
-        background: #f2f2f2;
-        border-radius: 30px;
-        color:grey;
-        font-size: 16px;
-        text-align: center;
-        padding-left: 5px;
-        padding-right: 40px;
-       
-     } */
-     /* .search-box button{
-        cursor:pointer;
-        width:40px;
-        height: 40px;
-        border-radius: 30px;
-        border: none;
-        position: absolute;
-        top:0;
-        right:0;
-        transform: scale(0.9);
-        background: rgb(14, 14, 14);
-     } */
-     /* header ul{
-        flex:2;
-        display: flex;
-        justify-content: space-around;
-     } */
-     /* header ul li{
-        list-style: none;
-     } */
-     /* header ul li a{
-        text-decoration: none;
-        color:#fff;
-        font-weight: 500;
-        text-transform: uppercase;
-        padding:10px 15px;
-     } */
-/*      
+     }  
      header .menu{
         font-size:2.5rem;
         display: none;
-     } */
-    
-     /* .logo img{
-        height:40px;
-        width:40px;
-        margin-top: 20px;
-        margin-left: 25px;
-     } */
-     /* ////////////// */
+     } 
      @import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
 
 :root {
@@ -125,9 +69,6 @@
   --transition-time: 0.5s;
 }
 
-* {
-  box-sizing: border-box;
-}
 
 body {
   margin: 0;
@@ -1155,7 +1096,6 @@ main {
         }
 
     </style>
-  </head>
 
   {%include 'navbar.html' %}
 
@@ -1368,112 +1308,7 @@ main {
     </div>
     </div>
 
-    
- 
-    <div class="footer">
-      <!-- footer conclusion and links -->
-      <div class="footer-text">
-          <!-- first box -->
-          <div class="conclude">
-              <div class ="logo">
-                <img src="https://res.cloudinary.com/dmnep85ym/image/upload/v1713867500/for_black_bgm_ioxgoi.png" alt="Smile Club Logo">    
-              </div>
-              <div class="conclude-text">
-                  <p>SMILE Club is a college initiative celebrating Indian culture through engaging events. Join us to explore and embrace our rich heritage with a vibrant community.</p>
-              </div>
-              
-          </div>
-
-           <!-- Second box -->
-          <div class="quick-links">
-            <li class="list-header">QUICK LINKS</li>
-            <li class="list-points"><a href="{% url 'home' %}">Home</a></li>
-            <li class="list-points"><a href="{% url 'blogs-list' %}">Blogs</a></li>
-            <li class="list-points"><a href="{% url 'gallery' %}">Gallery</a></li>
-            
-          </div>
-
-          <!-- third box -->
-          <div class="company">
-             
-            <li class="list-header">OTHER LINKS</li>
-            <li class="list-points"><a href="{% url 'team-list' %}">About Us</a></li>
-            <li class="list-points"><a href="{% url 'event-list' %}">Events</a></li>
-            
-            
-        </div>
-         
-         
-
-          
-        <!-- fourth box -->
-        <div class="download-app">
-               
-          <li class="list-header">FOLLOW US ON</li>
-          <div class="social-media">
-                  
-            <div class="bg-circle">
-                <a href="https://www.instagram.com/smile._.club_nitk/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            </div>
-            <div class="bg-circle">
-                <a href="https://www.linkedin.com/company/smile-club-nitk/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-            </div>
-            <div class="bg-circle">
-                <a href="https://youtube.com/@SMILEClub_NITK?si=qk-v-oJZi8M7igKn" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      
-      <!-- footer company name -->
-      <h2 class="smile">smile club</h2>
-  </div>
-    
-    <!-- <footer>
-      <div class="waves">
-        <div class="wave" id="wave1"></div>
-        <div class="wave" id="wave2"></div>
-        <div class="wave" id="wave3"></div>
-        <div class="wave" id="wave4"></div>
-      </div>
-      <ul class="social_icon">
-          <li><a href="https://www.linkedin.com/company/smile-club-nitk/"><i class="fab fa-linkedin"></i></a></li>
-          <li> <a href="https://youtube.com/@SMILEClub_NITK?si=qk-v-oJZi8M7igKn"><i class="fab fa-youtube"></i></a></li>
-            <li> <a href="https://www.instagram.com/p/C52tiEtLNU5/?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a></li>
-      </ul>
-      <ul class="menu">
-        <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'team-list' %}">About us </a></li>
-        <li><a href="{% url 'blogs-list' %}">Blog</a></li>
-        <li><a href="{% url 'event-list' %}">Timeline</a></li>
-        <li><a href="{% url 'gallery' %}">Gallery</a></li>
-        <li><a href="{% url 'display_youtube_videos' %}">Videos</a></li>
-        
-      </ul>
-      <p>@2024 Smile Club | All rights reserved</p>
-    </footer> -->
-
-    {% comment %} <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js"
-      integrity="sha512-qF6akR/fsZAB4Co1QDDnUXWnaQseLGXoniuSuSlPQK6+aWhlMZcHzkasCSlnWoe+TJuudlka1/IQ01Dnhgq95g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollTrigger.min.js"
-      integrity="sha512-IHDCHrefnBT3vOCsvdkMvJF/MCPz/nBauQLzJkupa4Gn4tYg5a6VGyzIrjo6QAUy3We5HFOZUlkUpP0dkgE60A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="{% static 'index.js' %}"></script></body>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script> {% endcomment %}
+    {%include 'footer.html' %}
+   
   </body>
 </html>
